make editor work better in dark mode

--- a/src/components/EditorPreview.module.css
+++ b/src/components/EditorPreview.module.css
@@ -3,6 +3,7 @@
   background-color: whitesmoke;
   padding: 0.5em;
   margin-bottom: 1em;
+  color: black;
 }
 .previewContainer {
   padding: 0.5em;
