--- a/src/components/HomepageFeatures.module.css
+++ b/src/components/HomepageFeatures.module.css
@@ -5,9 +5,13 @@
   align-items: center;
   padding: 2rem 0;
   width: 100%;
+  margin-top: 3rem;
 }
 
 .featureSvg {
   height: 200px;
   width: 200px;
+  background-color: #ff9b9f;
+  border-radius: 50%;
+  padding: 1rem;
 }
