configure typescript and add component for list of github labels

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -27,3 +27,10 @@
 li > .admonition {
   margin-top: 0.5em;
 }
+
+img.emoji {
+  height: 1em;
+  width: 1em;
+  margin: 0 0.05em 0 0.1em;
+  vertical-align: -0.1em;
+}
