--- a/src/components/github/FilteredLabelsList.module.css
+++ b/src/components/github/FilteredLabelsList.module.css
@@ -1,7 +1,7 @@
 .label {
-  --label-height: 2em;
+  --label-height: 1.7rem;
   padding: 0 10px;
-  font-size: 0.8em;
+  font-size: 0.8rem;
   font-weight: bold;
   line-height: var(--label-height);
   height: var(--label-height);
