--- a/docusaurus/src/components/github/Projects.module.css
+++ b/docusaurus/src/components/github/Projects.module.css
@@ -1,22 +1,32 @@
 .container {
-  --padding-block: 10px;
-  --padding-inline: 20px;
-  --border-radius: 15px;
+  --padding-block: 12px;
+  --padding-inline: 16px;
+  --border-radius: 10px;
+  border: 1px solid var(--ifm-color-gray-300);
   border-radius: var(--border-radius);
   padding-top: 0px;
 }
 
 .container h3 {
-  background-color: var(--ifm-color-primary);
   padding-inline: var(--padding-inline);
-  padding-block: var(--padding-block);
+  padding-block: var(--padding-block) 0;
   border-start-start-radius: var(--border-radius);
   border-start-end-radius: var(--border-radius);
+  font-weight: 600;
   margin-block: 0;
+  display: flex;
+  justify-content: space-between;
+}
+
+.container h3 > a {
+  color: var(--ifm-color-primary-dark);
+}
+
+.container h3 > a::after {
+  content: "\00a0\00a0↗";
 }
 
 .container > div {
-  border: 1px solid var(--ifm-color-gray-700);
   border-block-start: 0;
   border-end-start-radius: var(--border-radius);
   border-end-end-radius: var(--border-radius);
@@ -24,19 +34,6 @@
   padding-block: var(--padding-block);
   display: flex;
   flex-direction: column;
-}
-
-.container > div > a:last-child {
-  align-self: flex-end;
-  display: inline-flex;
-}
-
-.container > div > div {
-  padding-block-end: var(--padding-block);
-}
-
-.container > div > a:last-child::after {
-  content: "\00a0\00a0→";
 }
 
 .container + .container {
