dark theme TODO admonition

--- a/docusaurus/src/css/custom.css
+++ b/docusaurus/src/css/custom.css
@@ -43,3 +43,8 @@ html {
   --ifm-alert-background-color: #fdf7d8;
   --ifm-alert-border-color: #f8de5d;
 }
+
+html[data-theme="dark"] .theme-admonition-TODO {
+  --ifm-alert-background-color: #463a02;
+  --ifm-alert-border-color: #f8de5d;
+}
