--- a/docusaurus/src/pages/index.module.css
+++ b/docusaurus/src/pages/index.module.css
@@ -30,8 +30,12 @@
 .heroBanner h1 {
   -webkit-text-stroke: 1px #ff9b9f;
   color: var(--ifm-font-color-base);
-  text-shadow: 3px 3px 0 #ff9b9f, -1px -1px 0 #ff9b9f, 1px -1px 0 #ff9b9f,
-    -1px 1px 0 #ff9b9f, 1px 1px 0 #ff9b9f;
+  text-shadow:
+    3px 3px 0 #ff9b9f,
+    -1px -1px 0 #ff9b9f,
+    1px -1px 0 #ff9b9f,
+    -1px 1px 0 #ff9b9f,
+    1px 1px 0 #ff9b9f;
 }
 
 .warning {
