use different method for self hosting

--- a/docusaurus/src/css/custom.css
+++ b/docusaurus/src/css/custom.css
@@ -48,3 +48,7 @@ html[data-theme="dark"] .theme-admonition-TODO {
   --ifm-alert-background-color: #463a02;
   --ifm-alert-border-color: #f8de5d;
 }
+
+.theme-doc-sidebar-menu .hidden {
+  display: none;
+}
