--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -6,3 +6,7 @@
 Add additional Tailwind styles to this file, for example with @layer:
 https://tailwindcss.com/docs/adding-custom-styles#using-css-and-layer
 */
+
+.inline-icon {
+	@apply !inline align-middle;
+}
