--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,9 +1,9 @@
 @layer base, starlight, theme, components, utilities;
 
-@import '@astrojs/starlight-tailwind';
-@import 'tailwindcss/theme.css' layer(theme);
-@import 'tailwindcss/utilities.css' layer(utilities);
+@import "@astrojs/starlight-tailwind";
+@import "tailwindcss/theme.css" layer(theme);
+@import "tailwindcss/utilities.css" layer(utilities);
 
 .inline-icon {
-	@apply !inline align-middle;
+  @apply !inline align-middle;
 }
